--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Proto4</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-</head>
-<body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+<html> 
+  <head> 
+    <title><%= @title %></title> 
+    <%= stylesheet_link_tag :all %>
+  	<%= javascript_include_tag :defaults %>
+    <%= csrf_meta_tag %>
+  </head> 
+  <body> 
+    <div id="whole_page"> 
+      <div id="header">Alterego</div> 
+      <div id="nav"> 
+        <%= link_to_unless_current "Home", root_path %> | 
+        <%= link_to_unless_current "About", about_path %> | 
+        <%= link_to_unless_current "Help", help_path%> | 
+        <%= link_to_unless_current "Contact", contact_path%>  
+       
+        <span style="float: right">
+        <% if user_signed_in?  -%>
+          <%= current_user.username %> |
+          <%= link_to 'My info', edit_user_registration_path %> |
+          <%= link_to 'Sign out', destroy_user_session_path %>
+        <% else -%>
+  		  <%= link_to 'Register', new_user_registration_path %> | 
+ 		  <%= link_to 'Sign in', new_user_session_path %>
+		<% end -%> 
+	  </span>
+      </div> 
+      <div id="content"> 
+        <% if flash[:notice] -%> 
+          <div id="notice"><%= flash[:notice] %></div> 
+        <% end -%> 
+        <%= yield %> 
+      </div> 
+      <% if ENV["RAILS_ENV"] == "development" %> 
+        <%= debug(params) %> 
+      <% end %> 
+    </div> 
+  </body> 
+</html> 
 
-<%= yield %>
-
-</body>
-</html>
